--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <header>
+        <h1>📦Mahsulotlar royhati</h1>
+        <a href="./admin.html" class="btn">Admin panelga o`tish</a>
+    </header>
+    <div id="loader">Yuklanmoqda...</div>
+    <main id="product-list"></main>
       
 
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
